FROG CMS - Change Log

======
Sigla:
+ enhancement, addition
- bug fix
. other development
======

0.9.5 - released 2008-12-??

+ Added drag-to-copy feature for better multi-language support. Thanks tuupola.
+ Added a new core plugin called skeleton to help out new plugin developers.
+ Added translation template generator to help out translators with translating Frog core and plugins.
+ Added Norwegian and Swedish core translations.
+ Added updated Chinese translation.
+ Removed split between frontend and backend.
- Fixed XHTML compatibility problem with Comment plugin.
- Fixed issue where only the last addJavascript was accepted.
. Updated file_manager plugin translations to conform to new template.
. Updated comments in preparation for PHPDoc documentation.
. Renamed root dir text files to avoid name conflicts and accomodate Windows users.
. Renamed style.css into screen.css for more consistency with print.css in Normal layout.
. Added an ID to the "view this page" link so it can be styled.

0.9.4 - released 2008-09-29

+ Added function to allow plugin devs to add one or more javascript file to the backend html for their plugin. (issue 35)
+ Added auto-detected link to a plugin's documentation page. Checks for existence of documentation() function in plugin's controller (issue 33)
+ Added auto-detected link to a plugin's settings page. Checks for existence of settings() function in plugin's controller (issue 32)
+ Added Indonesian translation
+ Added "View this page" link in the Edit page screen
+ Added "Tag to use this snippet" in the Snippets tab
+ Added en-messages.php.template to i18n directory of core to assist translators
+ Added admin section option to choose default tab after login (issue 29)
+ Added display of latest plugin version in Frog admin section
+ Added option to admin screen: allow html in page title. (default: false) (issue 66)
+ Added favicon
+ Added option to Plugin::addController to allow for controller without displaying a tab