@@ -1,21 +1,22 @@
 <?php
 
 /**
-   Frog CMS - Content Management Simplified. <http://www.madebyfrog.com>
-   Copyright (C) 2008 Philippe Archambault <philippe.archambault@gmail.com>
-
-   This program is free software: you can redistribute it and/or modify
-   it under the terms of the GNU Affero General Public License as
-   published by the Free Software Foundation, either version 3 of the
-   License, or (at your option) any later version.
-
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU Affero General Public License for more details.
-
-   You should have received a copy of the GNU Affero General Public License
-   along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * Frog CMS - Content Management Simplified. <http://www.madebyfrog.com>
+ * Copyright (C) 2008 Philippe Archambault <philippe.archambault@gmail.com>
+ * Copyright (C) 2008 Martijn van der Kleijn <martijn.niji@gmail.com>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 /**
@@ -24,6 +25,7 @@
  * apply methodes for page, layout and snippet of a page
  *
  * @author Philippe Archambault <philippe.archambault@gmail.com>
+ * @author Martijn van der Kleijn <martijn.niji@gmail.com>
  * @since  0.1
  *
  * -- TAGS --
@@ -72,6 +74,10 @@ class Page
     const STATUS_PUBLISHED = 100;
     const STATUS_HIDDEN = 101;
     
+    const LOGIN_INHERIT = 0;
+    const LOGIN_REQUIRED = 1;
+    const LOGIN_NOT_REQUIRED = 2;
+
     public $id;
     public $title = '';
     public $breadcrumb;
@@ -384,6 +390,19 @@ class Page
             return $this->parent->_getLayoutId();
         else
             exit ('You need to set a layout!');
+    }
+
+    /**
+     * Finds the "login needed" status for the page.
+     *
+     * @return int Integer corresponding to one of the LOGIN_* constants.
+     */
+    public function getLoginNeeded()
+    {
+        if ($this->needs_login == Page::LOGIN_INHERIT && $this->parent)
+            return $this->parent->getLoginNeeded();
+        else
+            return $this->needs_login;
     }
     
     private function _loadTags()
