@@ -21,6 +21,7 @@
  * @subpackage views
  *
  * @author Philippe Archambault <philippe.archambault@gmail.com>
+ * @author Martijn van der Kleijn <martijn.niji@gmail.com>
  * @version 0.1
  * @license http://www.gnu.org/licenses/agpl.html AGPL License
  * @copyright Philippe Archambault, Martijn van der Kleijn, 2008
@@ -151,8 +152,13 @@ if ($action == 'edit') { ?>
     
 <?php if (AuthUser::hasPermission('administrator') || AuthUser::hasPermission('developer')): ?>
     <p style="float: right">
+        <label for="page_needs_login"><?php echo __('Login:'); ?></label>
+        <select id="page_needs_login" name="page[needs_login]" title="<?php echo __('When enabled, users have to login before they can view the page.'); ?>">
+          <option value="<?php echo Page::LOGIN_NOT_REQUIRED; ?>"<?php echo $page->needs_login == Page::LOGIN_NOT_REQUIRED ? ' selected="selected"': ''; ?>><?php echo __('not required'); ?></option>
+          <option value="<?php echo Page::LOGIN_REQUIRED; ?>"<?php echo $page->needs_login == Page::LOGIN_REQUIRED ? ' selected="selected"': ''; ?>><?php echo __('required'); ?></option>
+          <option value="<?php echo Page::LOGIN_INHERIT; ?>"<?php echo $page->needs_login == Page::LOGIN_INHERIT ? ' selected="selected"': ''; ?>><?php echo __('&#8212; inherit &#8212;'); ?></option>
+        </select>
         <input id="page_is_protected" name="page[is_protected]" class="checkbox" type="checkbox" value="1"<?php if ($page->is_protected) echo ' checked="checked"'; ?>/><label for="page_is_protected" title="<?php echo __('When enabled, only users who are an administor can edit the page.'); ?>"> <?php echo __('Protected'); ?> </label>
-        <input id="page_needs_login" name="page[needs_login]" class="checkbox" type="checkbox" value="1"<?php if ($page->needs_login) echo ' checked="checked"'; ?>/><label for="page_needs_login" title="<?php echo __('When enabled, users have to login before they can view the page.'); ?>"> <?php echo __('Login required'); ?> </label>
     </p>
 <?php endif; ?>
     <p><small>
