@@ -9,19 +9,20 @@ Sigla:
 
 0.9.5 - released 2008-12-??
 
++ Added front-end login feature similar to layout selector. (login required, not required, inherit)
 + Added drag-to-copy feature for better multi-language support. Thanks tuupola.
 + Added a new core plugin called skeleton to help out new plugin developers.
 + Added translation template generator to help out translators with translating Frog core and plugins.
 + Added Norwegian and Swedish core translations.
 + Added updated Chinese translation.
 + Removed split between frontend and backend.
++ Added an ID to the "view this page" link so it can be styled.
 - Fixed XHTML compatibility problem with Comment plugin.
 - Fixed issue where only the last addJavascript was accepted.
 . Updated file_manager plugin translations to conform to new template.
 . Updated comments in preparation for PHPDoc documentation.
 . Renamed root dir text files to avoid name conflicts and accomodate Windows users.
 . Renamed style.css into screen.css for more consistency with print.css in Normal layout.
-. Added an ID to the "view this page" link so it can be styled.
 
 0.9.4 - released 2008-09-29
 
